--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,15 @@
 				</configuration>
 			</plugin>
 			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <version>3.1</version>
+		        <configuration>
+		          	<source>1.6</source>
+		         	<target>1.6</target>
+		        </configuration>
+      		</plugin>
+			<plugin>
 				<groupId>org.codehaus.sonar</groupId>
 				<artifactId>sonar-packaging-maven-plugin</artifactId>
 				<version>1.7</version>
